array.island.Island.scala.error
Compilation error:
Island:5: error: not found: value k
  while (k!=(b-1)){
         ^Island:6: error: not found: value k
    if (num(k+1)>num(k)){
            ^Island:6: error: not found: value k
    if (num(k+1)>num(k)){
                     ^Island:9: error: not found: value k
    k=k+1
    ^