array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var a=0
  var b=num.size
  while (k!=(b-1)){
    if (num(k+1)>num(k)){
      a=a+1
    }
    k=k+1
  }
  return a
}